docs/1.16/get-started/01-setting-up-prisma-demo-server-a001.mdx
import QueryChooser from 'components/Markdown/QueryChooser'
import Collapse from 'components/Markdown/Collapse'
import Code from 'components/Markdown/Code'

export const meta = {
  title: 'Setting up Prisma',
  step: 1,
  gettingStartedTitle: 'Use free, hosted demo database',
  position: 3,
  nextText: 'Great work! 👏  Move on to learn how you can change your data model and (re-)generate your Prisma client.'
}

## Goals

On this page, you will learn how to:

- Install the Prisma CLI
- Create a Prisma service configuration
- Deploy a Prisma service to a Demo server in Prisma Cloud
- Read and write data using the Prisma client

## Install the Prisma CLI

The [Prisma CLI](alx4) is used to deploy and manage Prisma Services. You can install it using [Homwbrew](https://brew.sh/) or [NPM](https://www.npmjs.com/):

<Code languages={["Homebrew", "NPM"]}>

```bash copy
brew install prisma
```

```bash copy
npm install -g prisma
```

</Code>

## Create a Prisma service configuration

To bootstrap the configuration files for your first Prisma service, create a new directory and initalize it using the `prisma init` command:

```bash copy
mkdir hello-world
cd hello-world
prisma init
```

After running `prisma init`, the Prisma CLI prompts you to select _how_ you want to deploy your Prisma service:

1. Select **Demo server** from the list.
1. When your browser opens, register with [Prisma Cloud](https://www.prisma.io/cloud/). This is needed because that's where the Demo server is hosted.
1. Go back to your terminal.
1. Choose the suggested values for all following questions by just hitting **Enter** until the interactive prompt terminates.

<Collapse title="Learn about the generated files">

- `prisma.yml`: The root configuration file for your Prisma service.
- `datamodel.graphql`: Specifies the datamodel for your application that will be mapped to the database.
- `prisma.js`: The auto-generated Prisma client library that connects to your Prisma service.

</Collapse>


## Deploy the Prisma service

The `prisma init` command created the _minimal_ Service configuration needed to deploy a Prisma service: `prisma.yml` and `datamodel.graphql`. This Service configuration now needs to be _deployed_ so you can use the Prisma API of your Service:

```bash copy
prisma deploy
```

Congratulations, you have successfully set up Prisma. You can now start using the Prisma client to talk to your database from code.`

## Prepare Node application

Run the following command to create an empty Node script:

```bash copy
touch index.js
```

Next, initialize an empty NPM project in the current directory and install the required dependencies:

```bash copy
npm init -y
npm install --save prisma-lib graphql
```

## Read and write data using the Prisma client

Now type the following code in `index.js` and save it afterwards:

```js copy
const { prisma } = require('./prisma')

// A `main` function so that we can use async/await
async function main() {

  // Create a new user called `Alice`
  const newUser = await prisma.createUser({ name: 'Alice' })
  console.log(`Created new user: ${newUser.name} (ID: ${newUser.id})`)

  // Read all users from the database and print them to the console
  const allUsers = await prisma.users()
  console.log(allUsers)
}

main().catch(e => console.error(e))
```

Execute the script with the following command:

```bash copy
node index.js
```

Whenever you run this script with that command, a new user record is created in the database (because of the call to `createUser`). 

Feel free to play around with the Prisma client API and try out some of the following operations by adding the following code snippets to the file (at the end of the `main` function) and re-executing the script:

<QueryChooser titles={["Fetch single user", "Filter user list", "Update a user's name", "Delete user"]}>

```js lineNumbers,copy
const user = await prisma
  .user({ id: '__USER_ID__' })
```

```js lineNumbers,copy
const usersCalledAlice = await prisma
  .users({
    where: {
      name: 'Alice'
    }
  })
```

```js lineNumbers,copy
 const updatedUser = await prisma
  .updateUser({
    where: { id: '__USER_ID__' },
    data: { name: 'Bob' }
  })
```

```js lineNumbers,copy
 const deletedUser = await prisma
  .deleteUser({ id: '__USER_ID__' })
```

</QueryChooser>

> In some snippets, you need to replace the `__USER__ID__` placeholder with the ID of an actual user.